(library
 (name ltx)
 (public_name ltx)
 (preprocess
  (action
   (run %{bin:cppo} -V OCAML:%{ocaml_version} %{input-file})))
 (libraries
  astring
  csexp
  fmt
  logs
  ocaml-version
  odoc-parser
  re
  str
  compiler-libs.common
  unix))

(ocamllex lexer_mdx)

(ocamllex lexer_cram)

(ocamllex lexer_top)
